# redirector

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  Makefile  QUICKSTART.md  README.md  SECURITY.md  database.py  docker-compose.yml  migrate_database.py  pyproject.toml  redirector.py  requirements-minimal.txt  requirements.txt
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
src/redirector/: __init__.py
src/redirector/api/: routes.py
src/redirector/cli/: main.py
src/redirector/core/: config.py  models.py
src/redirector/servers/: dashboard.py  redirect.py
static/css/: style.css
static/js/: dashboard.js  notifications.js  theme-toggle.js  utils.js
templates/: base.html  dashboard.html  dashboard_raw.html  log_detail.html  log_detail_raw.html
tests/integration/: test_servers.py
tests/unit/: test_config.py  test_models.py
